the hands-on excersice is ready

--- a/src/styles/heroeElement.module.css
+++ b/src/styles/heroeElement.module.css
@@ -16,7 +16,7 @@
 }
 
 .buttonId {
-  background-color: rgb(84, 94, 170);
+  background-color: #5e6570;
   border-radius: 5px 0 0 5px;
   color: white;
 }
